fix overflow issue for dropdown menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
 .navbar {
   padding: 0px;
   height: 64px;
-  overflow: hidden;
   background: #FFF;
   max-width: 1440px;
   margin-left: auto;
@@ -17,8 +16,8 @@ body {
   padding-right: 0px;
 }
 .navbar-default .navbar-nav > li > a {
-  height: 64px;
   line-height: 30px;
+  height: 64px;
   font-size: 1.1em;
   color: #616161;
   font-weight: 300;
